test/neg/neg-atomic1.errc
Atomic domains only supported on non-const 32 and 64-bit integral or floating-point types
